# lmgate

./: .env_example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yaml  pyproject.toml
.claude/commands/: software-build.md  software-design.md
.cursor/: worktrees.json
.cursor/commands/: design-software.md
.cursor/rules/: first-principles.mdc  task-management.mdc
config/: lmgate.yaml
data/: allowlist.csv
demo/: README.md  demo.py  run_demo.sh
docs/: LMGate detailed design.md  LMGate functional specification.md  LMGate user guide.md  lmgate specification.md  lmgate-design-claude.md
lmgate/: Dockerfile  __main__.py  allowlist.py  auth.py  config.py  providers.py  server.py  stats.py
nginx/: Dockerfile  nginx.conf
nginx/scripts/: auth.js  stats.js
scripts/: lint.sh  lmgate-manager.sh  run-e2e-integration-tests.sh  run-e2e-system-tests.sh  run-e2e-tests.sh  run-tests.sh
tasks/backlog/: 20260216_02_add_e2e_docker_integration_tests.md  20260216_02_add_e2e_real_api_tests.md  20260216_03_add_code_quality_tooling.md  20260216_04_improve_agentic_workflow_rules.md  20260221_application_demo_example_for_quick_start.md
tasks/done/: 20260216_01_add_e2e_docker_integration_tests.md  20260216_02_add_e2e_real_api_tests.md  20260216_03_add_code_quality_tooling.md  20260216_implement_lmgate_prototype.md  20260217_fix_prototype_bugs.md  20260220_improve_documentation_and_rules.md  20260222_application_demo_example_for_quick_start.md
tests/ad-hoc/: span.json
tests/e2e/: Dockerfile.mock  docker-compose.e2e-integration.yaml  docker-compose.e2e-system.yaml  docker-compose.e2e.yaml  mock_upstream.py  nginx.e2e.conf  test_e2e.py  test_e2e_integration.py  test_e2e_system.py
(+7 files in other folders)
